--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
@@ -18,7 +19,9 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-type-animation": "^3.2.0",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
